<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/corners_nocolor"
    android:gravity="center">

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/Subscribe"
        android:background="@drawable/corners_accent"
        android:textStyle="bold"
        android:textAppearance="@style/LettersLoginWhite16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

    <RelativeLayout


        android:id="@+id/relativeLayout2"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/corners_primary_dark"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32">

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:background="@color/backTint"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tutoria_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/title_tuto"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tutoria_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:text="@string/tuto_class"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tutor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:layout_marginTop="5sp"
                android:text="@string/tutor"
                android:textColor="@color/colorAccent"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:drawableLeft="@drawable/ic_date"
                android:drawablePadding="-28dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/tuto_fecha"
                android:textAppearance="@style/LettersLoginWhite16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/hora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/clock_alarm"
                android:drawablePadding="-26dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/tuto_hora"
                android:textAppearance="@style/LettersLoginWhite16"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <!-- -->
            <TextView
                android:id="@+id/lugar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_place_black_24dp"
                android:drawablePadding="-26dp"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/tuto_lugar"
                android:textAppearance="@style/LettersLoginWhite16"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>


        <de.hdodenhof.circleimageview.CircleImageView

            android:id="@+id/display_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:padding="10dp"
            android:src="@drawable/ic_launcher_background"
            app:civ_border_color="#000"
            app:civ_border_width="2dp" />
    </RelativeLayout>


</android.support.constraint.ConstraintLayout>